Fixed overlap between animals and text bubbles

--- a/app/(pages)/(hackers)/_components/StarterKit/FindTheRightFit/FindTheRightFit.module.scss
+++ b/app/(pages)/(hackers)/_components/StarterKit/FindTheRightFit/FindTheRightFit.module.scss
@@ -3,16 +3,20 @@
 .Container {
     // background: var(--background-primary);
     background-color: #123041; //could not find this color in globals
-    padding: 10% 40% 10% 5%;
+    // padding: 10% 0% 10% 5%;
     border-radius: 12px;
-    // Background Image
-    background: url('/hackers/mvp/PeepingAnimals.svg'),
-                linear-gradient(to right, #123041 99%, #005271 1%); 
-    background-size: contain; 
-    background-repeat: no-repeat;
-    background-position: right center; 
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+    justify-content: space-between;
+    // background: linear-gradient(to right, #123041 98%, #005271 2%);
 
     .questions {
+        padding-top: 8%;
+        padding-bottom: 5%;
+        padding-right: 5%;
+        padding-left: 4%;
+        flex: 1;
 
         h3 {
             text-align: left;
@@ -40,6 +44,7 @@
                 align-items: center;
                 align-self: stretch;
                 text-align: center;
+                width: 100%;
 
                 p {
                     color: var(--text-dark);
@@ -64,8 +69,8 @@
     
     .animals {
         border: 3px solid red;
-        background-color: white;
-        padding: 5%;
+        align-items: flex-end;
+        flex-shrink: 0;
     }
 
 }
@@ -74,7 +79,7 @@
     .Container {
         // background: var(--background-primary);
         background-color: var(--sea-background); //could not find this color in globals
-        padding: 10% 7% 10% 5%;
+        padding: 10% 0% 10% 5%;
         border-radius: 12px;
         background-image: none;
     
@@ -126,12 +131,6 @@
                     background: #AFD157;
                 }
             }
-        }
-
-        .animals {
-            border: 3px solid red;
-            background-color: white;
-            padding: 5%;
         }
     }
 }
